log

Thu 14 Mar 2024 08:14:58 PM UTC: 
 exercises.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 48 insertions(+), 7 deletions(-)
test.c: In function ‘test_checkSorted’:
test.c:258:18: error: implicit declaration of function ‘checkSorted’; did you mean ‘test_checkSorted’? [-Werror=implicit-function-declaration]
  258 |     int result = checkSorted(arr, size);
      |                  ^~~~~~~~~~~
      |                  test_checkSorted
test.c: In function ‘filterEvenNumbers’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
95ace9b
